Container/Kubernetes/k3s-soniiit/Homepage/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage-kube.home.soniiit.net`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
  tls:
    secretName: home-soniiit-net-selfsigned-tls
